--- a/index.html
+++ b/index.html
@@ -1,67 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo Ping-Pong</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
+      * {
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <canvas></canvas>
     <script>
-        const canvasEl = document.querySelector("canvas"),
-         canvasCtx = canvasEl.getContext("2d")
+      const canvasEl = document.querySelector("canvas"),
+        canvasCtx = canvasEl.getContext("2d"),
+        gapX = 10
 
-         const lineWidth = 15
+      const field = {
+        w: window.innerWidth,
+        h: window.innerHeight,
+        draw: function () {
+          canvasCtx.fillStyle = "#286047"
+          canvasCtx.fillRect(0, 0, this.w, this.h)
+        },
+      }
 
+      const line = {
+        w: 15,
+        h: field.h,
+        draw: function () {
+          canvasCtx.fillStyle = "#ffffff"
+          canvasCtx.fillRect(field.w / 2 - this.w / 2, 0, this.w, this.h)
+        },
+      }
 
-        function setup() {
-            canvasEl.width = canvasCtx.width = window.innerWidth
-            canvasEl.height = canvasCtx.height = window.innerHeight
+      const leftPaddle = {
+        x: gapX,
+        y: 100,
+        w: line.w,
+        h: 200,
+        draw: function () {
+          canvasCtx.fillStyle = "#ffffff"
+          canvasCtx.fillRect(this.x, this.y, this.w, this.h)
+        },
+      }
+
+      const rightPaddle = {
+        x: field.w - line.w - gapX,
+        y: 100,
+        w: line.w,
+        h: 200,
+        draw: function () {
+          canvasCtx.fillStyle = "#ffffff"
+          canvasCtx.fillRect(this.x, this.y, this.w, this.h)
+        },
+      }
+      const score = {
+        human: 1,
+        computer: 2,
+        draw: function() {
+        canvasCtx.font = "bold 72px Arial"
+        canvasCtx.textAlign = "center"
+        canvasCtx.textBaseline = "top"
+        canvasCtx.fillStyle = "#01341D"
+        canvasCtx.fillText(this.human, field.w / 4, 50)
+        canvasCtx.fillText(this.computer, field.w / 4 + field.w / 2, 50)
         }
-        function draw() {
-            //desenha o campo
-            canvasCtx.fillStyle = "#286047"
-            canvasCtx.fillRect(0, 0, window.innerWidth, window.innerHeight)
-           
+      }
+
+      const ball = {
+        x: 300,
+        y: 200,
+        r: 20,
+        draw: function() {
             canvasCtx.fillStyle = "#ffffff"
-            //desenha a linha central
-            const x = window.innerWidth / 2 - lineWidth / 2
-            const y = 0
-            const w = lineWidth
-            const h = window.innerHeight
-
-            canvasCtx.fillRect(x, y, w, h)
-
-            //desenha a raquete esquerda
-            canvasCtx.fillRect(10, 400, lineWidth, 200)
-
-            //desenha a raquete direita
-            canvasCtx.fillRect(window.innerWidth - lineWidth - 10, 200, lineWidth, 200)
-
-            //desenha a bolinha
             canvasCtx.beginPath()
-            canvasCtx.arc(200, 300, 20, 0, 2 * Math.PI, false)
+            canvasCtx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false)
             canvasCtx.fill()
-
-            //desenha o placar
-            canvasCtx.font = "bold 72px Arial"
-            canvasCtx.textAlign = "center"
-            canvasCtx.textBaseline = "top"
-            canvasCtx.fillStyle = "#01341D"
-            canvasCtx.fillText('3', window.innerWidth / 4, 50)
-            canvasCtx.fillText('1', window.innerWidth / 4 + window.innerWidth / 2, 50)
-
         }
+      }
 
-        setup()
-        draw()
+      function setup() {
+        canvasEl.width = canvasCtx.width = field.w
+        canvasEl.height = canvasCtx.height = field.h
+      }
+
+      function draw() {
+        field.draw()
+        line.draw()
+
+        leftPaddle.draw()
+        rightPaddle.draw()
+        score.draw()
+
+        ball.draw()        
+        
+      }
+
+      setup()
+      draw()
     </script>
-</body>
+  </body>
 </html>
